fix: remove height from section
Removed height to fix layout shift.
Will be experimenting with different methods.

--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -5,7 +5,6 @@
   justify-content: center;
   align-items: center;
   background: var(--color-neutral-dark);
-  height: 100vh;
 }
 
 .intro-content {
